Working on checking the student answer :)

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Moveo Task</title>
+    <link rel="icon" href="./favicon.ico" />
+    <title>Coding Mentorship</title>
     
     <link rel="stylesheet" href="styles.css" />
   </head>
